force-app/main/default/objects/Business_Rule__c/fields/Business_Rule_Condition__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Condition__c</fullName>
    <label>Business Rule Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>