force-app/main/default/objects/Business_Rule__c/fields/Business_Rule_Logic__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Logic__c</fullName>
    <label>Business Rule Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>