force-app/main/default/objects/Business_Rule__c/fields/Configurator__c.field-meta.xml
<CustomField>
    <fullName>Configurator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configurator</label>
    <referenceTo>Configurator__c</referenceTo>
    <relationshipLabel>Business Rules</relationshipLabel>
    <relationshipName>Business_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>