force-app/main/default/objects/Business_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Business_Rule_Condition__c</columns>
    <columns>Business_Rule_Logic__c</columns>
    <columns>Configurator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>